--- a/build-NFC_monitoring-Desktop_Qt_5_10_1_MinGW_32bit-Debug/Makefile
+++ b/build-NFC_monitoring-Desktop_Qt_5_10_1_MinGW_32bit-Debug/Makefile
@@ -240,6 +240,7 @@ Makefile: ../NFC_monitoring/NFC_monitoring.pro C:/Qt/5.10.1/mingw53_32/mkspecs/w
 		C:/Qt/5.10.1/mingw53_32/lib/Qt5PrintSupport.prl \
 		C:/Qt/5.10.1/mingw53_32/lib/Qt5Widgets.prl \
 		C:/Qt/5.10.1/mingw53_32/lib/Qt5Gui.prl \
+		C:/Qt/5.10.1/mingw53_32/lib/Qt5SerialPort.prl \
 		C:/Qt/5.10.1/mingw53_32/lib/Qt5Core.prl
 	$(QMAKE) -o Makefile ..\NFC_monitoring\NFC_monitoring.pro -spec win32-g++ "CONFIG+=debug" "CONFIG+=qml_debug"
 C:/Qt/5.10.1/mingw53_32/mkspecs/features/spec_pre.prf:
@@ -421,6 +422,7 @@ C:/Qt/5.10.1/mingw53_32/lib/qtmaind.prl:
 C:/Qt/5.10.1/mingw53_32/lib/Qt5PrintSupport.prl:
 C:/Qt/5.10.1/mingw53_32/lib/Qt5Widgets.prl:
 C:/Qt/5.10.1/mingw53_32/lib/Qt5Gui.prl:
+C:/Qt/5.10.1/mingw53_32/lib/Qt5SerialPort.prl:
 C:/Qt/5.10.1/mingw53_32/lib/Qt5Core.prl:
 qmake: FORCE
 	@$(QMAKE) -o Makefile ..\NFC_monitoring\NFC_monitoring.pro -spec win32-g++ "CONFIG+=debug" "CONFIG+=qml_debug"
